@@ -4,11 +4,11 @@ DIST Ngx_rrd_graph-0.1.tar.gz 4005 RMD160 7ae96d110e748b2f4457545440c777918c145b
 DIST chunkin-nginx-module-0.16.tgz 78612 RMD160 c8cf529ea3bd1bfb7cd06ce63cf82896fbbbfe33 SHA1 3b8e1d0bc17973060599e6a7299512e164763e6c SHA256 d5714c2e2861306a5f63ce12dc558be61e462eeca353596c74c680662b92ea6c
 DIST nginx-0.8.29.tar.gz 617202 RMD160 5960e7ec51261ec667f45722333971e26b759af4 SHA1 ff586e833688f1d72507091268e917c164784200 SHA256 64d96f6b37a1b38a21a819d28f7f57e9b1b5de319bc4d1f1907be8e5bdd1d631
 DIST nginx-0.8.30.tar.gz 617971 RMD160 5cb7d1c929458c3463954a8ec1af308d47d63740 SHA1 32c018b5c9cbc6d487125d7cbee3e131e08e0d0e SHA256 ed79a8201299ae90181d4623004ed5329054e3a78291e5e416a9341e036353d5
+DIST nginx-0.8.31.tar.gz 619261 RMD160 2a453d5194316fd5374193c6effd768f3afaec1e SHA1 48c7dc662dc1388e1aa4f5cc9f620a3bd2f27a5b SHA256 a810044bd7768da89d794dea8d6fb8503c5c46b0cfc4221e5151e04c4b91904e
 DIST nginx_mp4_streaming_public_20081229.tar.bz2 9469 RMD160 ec4c8a0ef86db6cf63f4697546462b127305f5a8 SHA1 ad909c369fa092b6ff457c599213d567a8a66936 SHA256 4908709c50f73d73cb1c16136eaca4b280d8abb60dfd302e79c48f71a68c5d3e
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
-EBUILD nginx-0.8.29-r50.ebuild 4938 RMD160 bb75364a71ce15909a8a67e21f6c896efc3d0167 SHA1 2dc253c7260f9d5d825667d23545a41b8bb2e45d SHA256 187b3f8d8eb2bff152c50390304b84b1d7a5ac727677a8ccdf1bf019f60bb5f6
 EBUILD nginx-0.8.29-r51.ebuild 5307 RMD160 7f9d1bce638223c444624ce54d91038e7f97a3cd SHA1 43b727b32e4953cf2f1bb9902183496ad4476bc3 SHA256 7447b788b7b8abaa74d04114b5b73559861a9c589416b6d855723c8a8ab8506d
-EBUILD nginx-0.8.30-r50.ebuild 5307 RMD160 7f9d1bce638223c444624ce54d91038e7f97a3cd SHA1 43b727b32e4953cf2f1bb9902183496ad4476bc3 SHA256 7447b788b7b8abaa74d04114b5b73559861a9c589416b6d855723c8a8ab8506d
 EBUILD nginx-0.8.30-r51.ebuild 5409 RMD160 d23b5915ff451d0b3e536b6eb2e64c24ebdac04f SHA1 2848e1c8e4560d6aee93d1fc934f09dd83e8c060 SHA256 9699acb6a985ea15139cbe3f0743ef441b11d2af004a4edb316eca0b1f9f8b81
-MISC ChangeLog 1733 RMD160 e4c6f5e6fade48091191ddf077e035f610476576 SHA1 047e8082076a724f3b92b24d0bba62f44b415994 SHA256 f5e1eb27d724261253b7b16abbaa30aad7b9170df76b8830acb45df200e3ce32
+EBUILD nginx-0.8.31-r50.ebuild 5409 RMD160 d23b5915ff451d0b3e536b6eb2e64c24ebdac04f SHA1 2848e1c8e4560d6aee93d1fc934f09dd83e8c060 SHA256 9699acb6a985ea15139cbe3f0743ef441b11d2af004a4edb316eca0b1f9f8b81
+MISC ChangeLog 1991 RMD160 a89cbd128e5c41134eb4c21c945d4ecba42ce134 SHA1 3f149675258193d8ebf9167256b1a33d7bedc116 SHA256 ef40501ed2f9874f88cb982dd240e336ad21f4364b4137993103e6211aa813ab
 MISC metadata.xml 1494 RMD160 b8c442b78a8893debb88da09250242a0192686e7 SHA1 633d4e5d1b951a2e8df0aa9fbc9012f457b45db9 SHA256 c3ec3619e5c5414dbec3c0445afc997184e18e22fb919c748a90fbc0288d15dd
