@@ -18,6 +18,15 @@
   +nginx-0.8.29-r50.ebuild:
   version bump
 
+  27 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  -nginx-0.8.29-r50.ebuild, -nginx-0.8.30-r50.ebuild,
+  +nginx-0.8.31-r50.ebuild:
+  delete old ebuild
+
+  27 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +nginx-0.8.31-r50.ebuild:
+  new minor version
+
   20 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +nginx-0.8.30-r51.ebuild, metadata.xml:
   add use libatomic
